--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,6 +81,7 @@ body {
 @layer base {
   * {
     @apply border-border;
+    @apply outline-none;
   }
   body {
     @apply bg-background text-foreground;
